flux-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.idp: semver:~1.0
  name: idp
  namespace: idp-dev
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: idp
      containers:
      - image: timspencer/idp:1.0.2
        name: idp
